@@ -13,7 +13,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. 
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 if $tracelevel then {
     strace $tracelevel
@@ -25,7 +25,7 @@ load_lib gm2-torture.exp
 gm2_set_compile_method "options_optimize"
 
 #
-# gm2_target_compile_options_optimize -- (overload the library function with our local 
+# gm2_target_compile_options_optimize -- (overload the library function with our local
 #                                         copy, compile a source file)
 #
 
@@ -37,7 +37,7 @@ proc gm2_target_compile_options_optimize { source dest type options } {
     global GCC_UNDER_TEST
     global TOOL_OPTIONS
 
-    send_log "successfully overloaded gm2_target_compile source = $source dest = $dest type = $type options = $options\n"	
+    send_log "successfully overloaded gm2_target_compile source = $source dest = $dest type = $type options = $options\n"
     if {[target_info needs_status_wrapper] != "" && \
 	    [target_info needs_status_wrapper] != "0" && \
 	    [info exists gluefile] } {
@@ -79,7 +79,8 @@ proc gm2_target_compile_options_optimize { source dest type options } {
 
 set gm2src ${srcdir}/../gm2
 
-gm2_init_pim "${srcdir}/gm2/pim/options/optimize/run/pass" 
+gm2_init_pim "${srcdir}/gm2/pim/options/optimize/run/pass"
+gm2_link_with "-lgm2 -liso -lpthread"
 
 #
 #  compile library file
