@@ -63,7 +63,9 @@
 	* testsuite/gm2/types/run/pass/gm2.exp:
           added library order.
 	* testsuite/lib/gm2.exp:  removed libpth/pth from the list
-	  of libraries to be included into the various paths.
+          of libraries to be included into the various paths.
+	* testsuite/gm2/pim/options/optimize/run/pass/gm2.exp:
+	  added library order.
 
 2019-10-08      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
